--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Bicycle Theft in London – Leaflet Heatmap Template</title>
+  <title>英國倫敦自行車竊盜熱區圖</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tachyons/4.11.1/tachyons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css">
@@ -35,11 +35,11 @@
   <script>
 
     var map = L.map('map', {
-      zoomControl: false, // Add zoom control separately below
+      zoomControl: true, // Add zoom control separately below
       center: [51.5, -0.1], // Initial map center
       zoom: 10, // Initial zoom level
-      attributionControl: false, // Instead of default attribution, we add custom at the bottom of script
-      scrollWheelZoom: false
+      attributionControl: true, // Instead of default attribution, we add custom at the bottom of script
+      scrollWheelZoom: true
     })
 
     // Add zoom in/out buttons to the top-right
@@ -72,7 +72,8 @@
 
       // Add all points into a heat layer
       var heat = L.heatLayer(data, {
-        radius: 25
+        radius: 25,
+        blur: 15
       })
 
       // Add the heatlayer to the map
