--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
   <div id="map" class="vh-100 vw-100 bg-near-white"></div>
 
   <div id="legend" class="bg-white fixed top-0 left-0 pa2 mt2 ml2 br1 o-90" style="z-index: 999; width: 380px">
-    <h1 class="f3 mt0">Bicycle Theft in London</h1>
+    <h1 class="f3 mt0">英國倫敦自行車竊盜熱區圖</h1>
 
     <p class="measure mb1">
-      This heatmap shows hotspots of bicycle theft in London
-      in January–July 2020 according to the Metropolitan Police data.
+      dddddddddddddddddddddddddddddddddddddddddddddd
+      dddddddddddddddddddddddddddddddddddddddddd
     </p>
 
   </div>
